--- a/src/main/java/com/company/gui/inProgress/InProgress.fxml
+++ b/src/main/java/com/company/gui/inProgress/InProgress.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
@@ -12,7 +11,7 @@
 
 <AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.company.gui.inProgress.InProgressPresenter">
     <children>
-      <VBox prefHeight="473.0" prefWidth="1280.0">
+      <VBox prefHeight="473.0" prefWidth="1280.0" AnchorPane.bottomAnchor="247.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <children>
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                <children>
@@ -56,6 +55,9 @@
             </HBox>
          </children>
         </VBox>
-      <ProgressBar fx:id="progress" layoutX="1025.0" layoutY="473.0" prefHeight="29.0" prefWidth="255.0" progress="0.0" />
+      <Label fx:id="progress" alignment="CENTER" contentDisplay="CENTER" layoutX="1094.0" layoutY="473.0" prefHeight="40.0" prefWidth="179.0" AnchorPane.bottomAnchor="207.0" AnchorPane.leftAnchor="1094.0" AnchorPane.rightAnchor="7.0">
+         <font>
+            <Font size="24.0" />
+         </font></Label>
     </children>
 </AnchorPane>
